# ch32x035-rs

./: Cargo.toml  README.md  build.sh  ch32x035-rs  flash.sh  memo.md  memory.x  rust-toolchain.toml  settings.sh
.cargo/: config.toml
config/: ch32x0-udev.rules  udev-rules.sh
src/: main.rs
